@@ -51,6 +51,10 @@ cat(\dots , file = "", sep = " ", fill = FALSE, labels = NULL,
   or if generated by filling (if argument \code{fill} is \code{TRUE} or
   numeric.)
 
+  If \code{file} is a connection and open for writing it is written from
+  its current position.  If it is not open, it is opened for the
+  duration of the call in \code{"wt"} mode and then closed again.
+
   Currently only atomic vectors (and so not lists) and \link{name}s
   are handled.  Character strings are output \sQuote{as is} (unlike
   \code{\link{print.default}} which escapes non-printable characters and
