@@ -2910,9 +2910,13 @@ SEXP attribute_hidden do_readLines(SEXP call, SEXP op, SEXP args, SEXP env)
     wasopen = con->isopen;
     if (!wasopen)
     {
+        char mode[5];
         con->UTF8out = TRUE; /* a request */
+        strcpy(mode, con->mode);
+        strcpy(con->mode, "rt");
         if (!con->open(con))
             error(_("cannot open the connection"));
+        strcpy(con->mode, mode);
         if (!con->canread)
         { /* recheck */
             con->close(con);
@@ -3026,10 +3030,13 @@ SEXP attribute_hidden do_writelines(SEXP call, SEXP op, SEXP args, SEXP env)
     wasopen = con->isopen;
     if (!wasopen)
     {
+        char mode[5];
         /* Documented behaviour */
+        strcpy(mode, con->mode);
         strcpy(con->mode, "wt");
         if (!con->open(con))
             error(_("cannot open the connection"));
+        strcpy(con->mode, mode);
         if (!con->canwrite)
         { /* unlikely, but be safe */
             con->close(con);
@@ -3208,9 +3215,12 @@ SEXP attribute_hidden do_readbin(SEXP call, SEXP op, SEXP args, SEXP env)
         if (!wasopen)
         {
             /* Documented behaviour */
+            char mode[5];
+            strcpy(mode, con->mode);
             strcpy(con->mode, "rb");
             if (!con->open(con))
                 error(_("cannot open the connection"));
+            strcpy(con->mode, mode);
             if (!con->canread)
             {
                 con->close(con);
@@ -3472,9 +3482,12 @@ SEXP attribute_hidden do_writebin(SEXP call, SEXP op, SEXP args, SEXP env)
     if (!wasopen)
     {
         /* Documented behaviour */
+        char mode[5];
+        strcpy(mode, con->mode);
         strcpy(con->mode, "wb");
         if (!con->open(con))
             error(_("cannot open the connection"));
+        strcpy(con->mode, mode);
         if (!con->canwrite)
         {
             con->close(con);
@@ -3833,9 +3846,12 @@ SEXP attribute_hidden do_readchar(SEXP call, SEXP op, SEXP args, SEXP env)
         if (!wasopen)
         {
             /* Documented behaviour */
+            char mode[5];
+            strcpy(mode, con->mode);
             strcpy(con->mode, "rb");
             if (!con->open(con))
                 error(_("cannot open the connection"));
+            strcpy(con->mode, mode);
             if (!con->canread)
             {
                 con->close(con);
@@ -3955,9 +3971,12 @@ SEXP attribute_hidden do_writechar(SEXP call, SEXP op, SEXP args, SEXP env)
     if (!wasopen)
     {
         /* Documented behaviour */
+        char mode[5];
+        strcpy(mode, con->mode);
         strcpy(con->mode, "wb");
         if (!con->open(con))
             error(_("cannot open the connection"));
+        strcpy(con->mode, mode);
         if (!con->canwrite)
         {
             con->close(con);
@@ -4196,21 +4215,24 @@ static Rboolean switch_or_tee_stdout(int icon, int closeOnExit, int tee)
     else if (icon >= 3)
     {
         Rconnection con = getConnection(icon); /* checks validity */
-        if (!con->canwrite)
-            error(_("cannot write to this connection"));
         toclose = 2 * closeOnExit;
         if (!con->isopen)
         {
+            char mode[5];
+            strcpy(mode, con->mode);
+            strcpy(con->mode, "wt");
             if (!con->open(con))
                 error(_("cannot open the connection"));
-            toclose = 1;
-            /* Once open, writability may have changed */
+            strcpy(con->mode, mode);
             if (!con->canwrite)
             {
                 con->close(con);
                 error(_("cannot write to this connection"));
             }
+            toclose = 1;
         }
+        else if (!con->canwrite)
+            error(_("cannot write to this connection"));
         R_OutputCon = SinkCons[++R_SinkNumber] = icon;
         SinkConsClose[R_SinkNumber] = toclose;
         R_SinkSplit[R_SinkNumber] = tee;
