@@ -158,6 +158,10 @@ NEW FEATURES
 	connection which was not already open in an appropriate binary
 	mode rather than the default mode.
 
+	readLines(), cat() and sink() now open a connection which was
+	not already open in an appropriate text mode rather than the
+	default mode.
+
     o	mood.test() now behaves better in the presence of ties.
 
 
